# scdb_pgsql

./: .readthedocs.yaml  README.md  create_test_db.sql  environment.yml  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  scdb_pgsql.rst
src/scdb_pgsql/: __init__.py  core.py  exceptions.py  meta.py
tests/: conftest.py  test_core.py  test_integration.py
